k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkist-ingress
  namespace: linkist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkist.vip
      secretName: linkist-tls
  rules:
    - host: linkist.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkist-app
                port:
                  number: 80
